deploy/k8s/namespace.yaml
# Optional - create/select your own namespace instead if you prefer.
apiVersion: v1
kind: Namespace
metadata:
  name: anchor-webui
